force-app/main/default/objects/SBQQ__Quote__c/fields/Configuration_Availability__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Availability__c</fullName>
    <inlineHelpText>Available (Default) will show only available configurations. Restricted will show both Available AND Restricted configs. Unavailable will show configurations that are unavailable.</inlineHelpText>
    <label>Configuration Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Restricted</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Unavailable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>