force-app/main/default/objects/SBQQ__Quote__c/fields/Count_Internal_Task_Records__c.field-meta.xml
<CustomField>
    <fullName>Count_Internal_Task_Records__c</fullName>
    <label>Count Internal Task Records</label>
    <summaryForeignKey>Internal_Task__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>