force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_Requirements_Exists__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requirements_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Requirements Exists</label>
    <type>Checkbox</type>
</CustomField>