force-app/main/default/objects/SBQQ__Quote__c/fields/Follow_Up_Contact__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in Quote Follow Up flow.</description>
    <label>Follow Up Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Follow Up Contact)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>