force-app/main/default/objects/SBQQ__Quote__c/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description>Used for Automated Follow Up Emails</description>
    <formula>SubmittedDate__c</formula>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>