force-app/main/default/objects/SBQQ__Quote__c/fields/Follow_Up_Task_Sent__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Task_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Process Builder Criteria for Quote Follow up. To flag if a Follow Up task had been sent out.</description>
    <label>Follow Up Task Sent</label>
    <type>Checkbox</type>
</CustomField>