force-app/main/default/objects/SBQQ__Quote__c/fields/Last_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Follow_Up_Date__c</fullName>
    <description>Used in Quote Follow Up flow. Automatically set</description>
    <label>Last Follow Up Date</label>
    <type>Date</type>
</CustomField>