force-app/main/default/objects/SBQQ__Quote__c/fields/Last_Followed_Up_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Followed_Up_By__c</fullName>
    <description>Used in Quote Follow Up Flow</description>
    <label>Last Followed Up By</label>
    <length>250</length>
    <type>Text</type>
</CustomField>