force-app/main/default/objects/SBQQ__Quote__c/fields/Lock_This_Quote__c.field-meta.xml
<CustomField>
    <fullName>Lock_This_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to lock the quote when Active Internal Tasks are on.</description>
    <label>Lock This Quote</label>
    <type>Checkbox</type>
</CustomField>