force-app/main/default/objects/SBQQ__Quote__c/fields/No_Customer_Requirements_Exist__c.field-meta.xml
<CustomField>
    <fullName>No_Customer_Requirements_Exist__c</fullName>
    <formula>NOT(Customer_Requirements_Exists__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Customer Requirements Exist</label>
    <type>Checkbox</type>
</CustomField>