force-app/main/default/objects/SBQQ__Quote__c/fields/Pending_Technical_Review_Count__c.field-meta.xml
<CustomField>
    <fullName>Pending_Technical_Review_Count__c</fullName>
    <label>Pending Technical Review Count</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Requires_Technical_Review__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>