force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Lines_with_Tech_Review__c.field-meta.xml
<CustomField>
    <fullName>Quote_Lines_with_Tech_Review__c</fullName>
    <label>Quote Lines with Tech Review</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Requires_Technical_Review__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>