force-app/main/default/objects/SBQQ__Quote__c/fields/Show_Watermark__c.field-meta.xml
<CustomField>
    <fullName>Show_Watermark__c</fullName>
    <description>New Version of Watermark to avoid having to use Field Updates via Process Builder</description>
    <formula>CASE( SBQQ__Status__c,
					&quot;Pending&quot;, 1,
					&quot;Change Order&quot;, 1,
					&quot;Pending Approvals&quot;, 1,
					&quot;Approved&quot;, 0,
					&quot;Order Submitted&quot;, 0,
					&quot;Cancel&quot;,1,
					&quot;Blocked&quot;,1,
					&quot;Unblock&quot;,1,
					&quot;Partner Submitted&quot;,1,
					&quot;Rejected&quot;,1,
					1)=1</formula>
    <label>Show Watermark</label>
    <type>Checkbox</type>
</CustomField>