force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Approved.recordType-meta.xml
<RecordType>
    <fullName>Approved</fullName>
    <active>true</active>
    <description>Coincides with the Approved SBQQ Status</description>
    <label>Approved</label>
</RecordType>