force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Internal_Support.recordType-meta.xml
<RecordType>
    <fullName>Internal_Support</fullName>
    <active>true</active>
    <description>This is used to lock the quote from any additional changes while the quote is being looked into by the Internal Teams</description>
    <label>Internal Support (Locked)</label>
</RecordType>