force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Pending.recordType-meta.xml
<RecordType>
    <fullName>Pending</fullName>
    <active>true</active>
    <description>Coincides with the Pending/In Review SBQQ Status</description>
    <label>Pending</label>
</RecordType>