force-app/main/default/objects/SBQQ__Quote__c/validationRules/Only_one_IT_per_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_one_IT_per_Quote</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISCHANGED(Count_Internal_Task_Records__c) ,
Count_Internal_Task_Records__c &gt; 1)</errorConditionFormula>
    <errorMessage>There can only be one Internal Task Record per Quote. Please go and re-open the current Internal Task record.</errorMessage>
</ValidationRule>